--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '2.2' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,33 +9,33 @@ package:
 source:
   fn: MatrixEQTL_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/MatrixEQTL_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/MatrixEQTL/MatrixEQTL_{{ version }}.tar.gz
-
+    - {{ cran_mirror }}/src/contrib/MatrixEQTL_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/MatrixEQTL/MatrixEQTL_{{ version }}.tar.gz
   sha256: 6a6df3ef019c7a7ee228c0e1801d300b8c9c098e5cddda441ee848557a970588
 
 build:
-  number: 0
+  merge_build_host: True  # [win]
+  number: 1
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
-
   run:
     - r-base
 
 test:
   commands:
-    - $R -e "library('MatrixEQTL')"  # [not win]
+    - $R -e "library('MatrixEQTL')"           # [not win]
     - "\"%R%\" -e \"library('MatrixEQTL')\""  # [win]
 
 about:
-  home: https://cran.r-project.org/web/packages/MatrixEQTL/index.html
+  home: http://www.bios.unc.edu/research/genomic_software/Matrix_eQTL/
   license: LGPL-3
   summary: Matrix eQTL is designed for fast eQTL analysis on large datasets. Matrix eQTL can
     test for association between genotype  and gene expression using linear regression  with
@@ -45,8 +44,9 @@ about:
     also supports models with heteroscedastic and/or correlated errors, false discovery
     rate estimation and  separate treatment of local (cis) and distant (trans) eQTLs.
   license_family: LGPL
+
 extra:
-   recipe-maintainers:
+  recipe-maintainers:
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
@@ -54,3 +54,5 @@ extra:
     - bgruening
     - daler
     - jdblischak
+    - cbrueffer
+    - dbast
